--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="container">
 
         <div class="navbar">
-            <img src="img/cat_5222151.png" alt="cat" class="cat" width="70">
+            <img src="cat_5222151.png" alt="cat" class="cat" width="70">
             <nav>
                 <a href="#skills" class="links">Инструменты</a>
                 <a href="#myWorks" class="links">Работы</a>
@@ -32,7 +32,7 @@
     <a href="#myWorks"><button class="btn">Проекты</button></a>
     </div>
 
-    <img src="img/me.JPG" alt="me" class="me" width="600px">
+    <img src="me.JPG" alt="me" class="me" width="600px">
 </div>
 </div>
     </section>
@@ -44,32 +44,32 @@
             <div class="wrapper">
 <div class="card card1">
     <h3>HTML5</h3>
-    <img src="/img/html.png" alt="html" width="150px">
+    <img src="html.png" alt="html" width="150px">
     <p class="skills-par">Каркас нашего сайта.Тут мы создаем кнопки текст и все что вы видете, но без дизайна</p>
 </div>
 <div class="card card2">
     <h3>CSS5</h3>
-    <img src="/img/text.png" alt="css" width="150px">
+    <img src="text.png" alt="css" width="150px">
     <p class="skills-par">Язык стиля и дизайна, который постоянно улучшается и совершенствует.Это как одежда и макияж сайта. С его помощью делаем всё красивым: цвета, шрифты</p>
 </div>
 <div class="card card3">
     <h3>JavaScript</h3>
-    <img src="/img/java.png" alt="js" width="150px">
+    <img src="java.png" alt="js" width="150px">
     <p class="skills-par">Язык программирования, благодаря которому можно оживить что угодно.Анимация, слайдеры, выпадающее меню и многое другое</p>
 </div>
 <div class="card card4">
     <h3>WordPress</h3>
-    <img src="img/wordpress.png" alt="wordpress" width="150px">
+    <img src="wordpress.png" alt="wordpress" width="150px">
     <p class="skills-par">Это конструктор сайтов. Позволяет делать сайты без программирования, а я его дорабатываю, чтобы выглядело и работало как нужно</p>
 </div>
 <div class="card card5">
     <h3>Figma</h3>
-    <img src="img/figma.png" alt="figma" width="150px">
+    <img src="figma.png" alt="figma" width="150px">
     <p class="skills-par">Инструмент веб-дизайнера для создания макетов для сайта.В этом редакторе обсуждаем правки и предложения по макету</p>
 </div>
 <div class="card card6">
     <h3>Bootstrap</h3>
-    <img src="img/media.png" alt="bootstrap" width="150px">
+    <img src="media.png" alt="bootstrap" width="150px">
     <p class="skills-par">Библиотека готовых кнопкок, сеток, карточек... для сайта.Позволяет быстро собрать красивый дизайн.Но не смотря на эти удобства стараюсь верстать нативно</p>
 </div>
             </div>
@@ -85,32 +85,32 @@
     <div class="carousel__window">
         <div class="carousel__inner">
             <div class="carousel__item">
-                <img src="img/Screenshot_1.jpg" alt="slide">
+                <img src="Screenshot_1.jpg" alt="slide">
                 <a href="https://sophiatey.github.io/"><h3>Uber</h3></a>
                 <button class="down">&darr;</button>
                 <p class="inf1">Uber- проект выполнен с использоанием <span>HTML</span>, <span>CSS</span>, <span>JavaScript</span>, <span>Figma</span>. Верстка одностраничного сайта магазина по макету из Figma , в рамках учебного проекта.Так же присутствует базовая анимация с использованием библиотеки animate.css (совсем чуть-чуть).</p>
                 
             </div>
             <div class="carousel__item car0">
-                <img src="img/myWeather.jpg" alt="slide">
+                <img src="myWeather.jpg" alt="slide">
                 <a href="https://sophiatey.github.io/My-weather/"><h3>myWeather</h3></a>
                 <button class="down">&darr;</button>
                 <p class="inf2">myWeather- проект выполнен с использоанием <span>API</span>, <span>HTML</span>, <span>CSS</span>, <span>JavaScript</span>. Верстка одностраничного сатйа по поиску прогноза погоды.</p>
             </div>
             <div class="carousel__item">
-                <img src="img/Screenshot_2.jpg" alt="slide">
+                <img src="Screenshot_2.jpg" alt="slide">
                 <a href="https://sophiatey.github.io/bagel/"><h3>Bagel</h3></a>
                 <button class="down">&darr;</button>
                 <p class="inf3">Bagel- проект выполнен с использоанием <span>HTML</span>, <span>CSS</span>, <span>Figma</span>. Верстка одностраничного сайта меню ресторана по моему макету Figma.</p>
             </div>
             <div class="carousel__item car1">
-                <img src="img/Photoportfolio.jpg" alt="slide">
+                <img src="Photoportfolio.jpg" alt="slide">
                 <a href="https://sophiatey.github.io/Portfiliophotos/"><h3>Photo portfolio</h3></a>
                 <button class="down">&darr;</button>
                 <p class="inf4">Photo portfolio- проект выполнен с использоанием <span>HTML</span>, <span>CSS</span>, <span>JavaScript</span>, <span>Figma</span>. Верстка одностраничного сайта Фотографа с фото-портфолио по макету из Figma.</p>
             </div>
             <div class="carousel__item">
-                <img src="img/relax.jpg" alt="slide">
+                <img src="relax.jpg" alt="slide">
                 <a href="https://sophiatey.github.io/naturesounds/"><h3>Meditation sounds</h3></a>
                 <button class="down">&darr;</button>
                 <p class="inf5">Meditation sounds- проект выполнен с использоанием <span>HTML</span>, <span>CSS</span>, <span>JavaScript</span>. Верстка многостраничного сайта со звуками для медитации.</p>
@@ -133,7 +133,7 @@
 
             <h2 class="country">Azerbaijan</h2>
             </div>
-            <img src="img/me2.JPG" alt="Me" width="400px" class="me">
+            <img src="me2.JPG" alt="Me" width="400px" class="me">
             </div>
 
         </div>
@@ -162,4 +162,5 @@
 <script src="https://kit.fontawesome.com/537d135c77.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
+
 </html>
