--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="carousel__inner">
             <div class="carousel__item">
                 <img src="Screenshot_1.jpg" alt="slide">
-                <a href="https://sophiatey.github.io/"><h3>Uber</h3></a>
+                <a href="https://sophiatey.github.io/Uber/"><h3>Uber</h3></a>
                 <button class="down">&darr;</button>
                 <p class="inf1">Uber- проект выполнен с использоанием <span>HTML</span>, <span>CSS</span>, <span>JavaScript</span>, <span>Figma</span>. Верстка одностраничного сайта магазина по макету из Figma , в рамках учебного проекта.Так же присутствует базовая анимация с использованием библиотеки animate.css (совсем чуть-чуть).</p>
                 
@@ -164,4 +164,5 @@
 </body>
 
 </html>
+
 
